Fix road to mainnet scroll, fix date color, fix margin on subtitle how to start

--- a/src/components/index-page/RoadToMainnet/style.scss
+++ b/src/components/index-page/RoadToMainnet/style.scss
@@ -207,7 +207,7 @@
         letter-spacing: 0;
         color: #81858d;
 
-        span {
+        &--alt {
           color: $c_black;
         }
 
