--- a/src/components/index-page/WhyYouShouldJoin/style.scss
+++ b/src/components/index-page/WhyYouShouldJoin/style.scss
@@ -58,11 +58,11 @@
     }
 
     &__button {
-      display: none;
+      display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 335px;
-      height: 60px;
+      width: 264px;
+      height: 80px;
       margin: 80px auto 0;
       padding: 18px 23px 18px 20px;
       background-color: $c_blue-ribbon;
@@ -117,6 +117,8 @@
     &__join-info {
       &__button {
         display: flex;
+        width: 335px;
+        height: 60px;
       }
 
       &__title {
