Move BecomeFM landing section, add hovers to blue start earning and view opportunity buttons, update index snapshot to accurately display current state

--- a/src/components/get-started/Hero/style.scss
+++ b/src/components/get-started/Hero/style.scss
@@ -44,6 +44,10 @@
       margin-top: 32px;
       padding: 0 30px;
       background-color: $c_blue-ribbon;
+
+      &:hover {
+        background-color: $c_han_purple;
+      }
     }
 
     &__button-text {
