--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -83,6 +83,10 @@
     margin: 0 32px 0 24px;
     padding: 18px 20px;
     background: $c_blue-ribbon;
+
+    &:hover {
+      background-color: $c_han_purple;
+    }
   }
 
   &__button-text {
@@ -204,6 +208,10 @@
       width: 100%;
       margin: 20px 36px;
       background-color: $c_black;
+
+      &:hover {
+        background-color: $c_black;
+      }
     }
 
     &__button-text {
