--- a/src/pages/token/style.scss
+++ b/src/pages/token/style.scss
@@ -1,182 +1,72 @@
 @import '../../styles/main.scss';
 
 .TokensPage {
-  &__title {
-    margin-top: 50px;
-    font-size: 40px;
-    color: $c_blue-ribbon;
-    text-align: center;
-
-    @media #{$screen-md} {
-      margin-top: 150px;
-      font-size: 50px;
-    }
+  &__cta-wrapper {
+    background-color: $c_blue-ribbon;
   }
 
-  &__sub-title {
-    margin-bottom: 30px;
-    font-family: $font-secondary;
-    font-size: 24px;
-    font-weight: bold;
-    color: $c_blue-ribbon;
-  }
+  &__cta {
+    @extend %container;
 
-  &__allocations {
-    @media #{$screen-md} {
-      display: flex;
-      justify-content: center;
-    }
-  }
-
-  &__allocations-content {
-    @media #{$screen-md} {
-      width: 50%;
-    }
-  }
-
-  &__allocations-text {
-    width: 80%;
-    margin: 20px auto 0;
-    font-size: 18px;
-    line-height: 1.5;
-    color: $c_ebony-clay;
-
-    @media #{$screen-md} {
-      margin: 0;
-      text-align: left;
-    }
-  }
-
-  &__section-image {
-    transform: translate(-11%, 0);
-
-    @media #{$screen-md} {
-      transform: none;
-    }
-  }
-
-  &__large-section-image {
-    transform: translate(-6%, 0);
-
-    @media #{$screen-md} {
-      transform: none;
-    }
-  }
-
-  &__legend {
-    display: inline-flex;
+    display: flex;
+    align-items: center;
     flex-direction: column;
-    margin: 60px 0;
+    padding: 120px 0;
+    background-image:
+      url('../../assets/background/token-footer-cta-left.svg'),
+      url('../../assets/background/token-footer-cta-right.svg');
+    background-position: left center, right bottom;
+    background-repeat: no-repeat;
 
-    @media #{$screen-md} {
-      display: flex;
-      margin: 40px 0;
+    &__link {
+      width: 264px;
+      height: 80px;
+      margin-top: 32px;
+    }
+
+    &__title {
+      max-width: 815px;
+      font-family: $font-primary;
+      font-size: 60px;
+      line-height: 68px;
+      letter-spacing: 0;
+      color: $c_white;
+      text-align: center;
     }
   }
 
-  &__disclaimer-text {
-    margin-top: 60px;
-    padding: 0 20px;
-    font-size: 14px;
-    font-style: italic;
-    line-height: 1.5;
-    text-align: justify;
-
-    a {
-      font-style: normal;
-      font-weight: bold;
+  @media #{$screen-max-md} {
+    &__cta {
+      padding: 120px 20px;
     }
+  }
 
-    p {
-      margin-bottom: 20px;
-      font-size: inherit;
+  @media #{$screen-max-sm} {
+    &__cta {
+      padding: 180px 0;
+      background-image:
+        url('../../assets/background/token-footer-cta-top-mobile.svg'),
+        url('../../assets/background/token-footer-cta-bottom-mobile.svg');
+      background-position: center 5%, center 95%;
+      background-repeat: no-repeat;
 
-      @media #{$screen-md} {
-        margin-bottom: 40px;
+      &__title {
+        width: 80%;
+        font-size: 40px;
+        line-height: 48px;
+        text-align: left;
+      }
+
+      &__link {
+        width: 335px;
+        height: 60px;
       }
     }
 
-    @media #{$screen-md} {
-      margin-top: 94px;
+    @media (max-width: 400px) {
+      &__cta__title {
+        width: 335px;
+      }
     }
-
-    @media #{$screen-lg} {
-      padding: 0;
-    }
-  }
-}
-
-.ActionCard {
-  padding: 50px;
-  color: $c_white;
-  text-align: center;
-  background: $c_blue-ribbon;
-
-  &__title,
-  &__content {
-    margin: 0 auto 20px;
-
-    @media #{$screen-md} {
-      margin: 0 auto 40px;
-    }
-  }
-
-  &__title {
-    font-size: 40px;
-    color: $c_white;
-
-    @media #{$screen-md} {
-      font-size: 50px;
-    }
-  }
-
-  &__content {
-    font-size: 14px;
-    line-height: 1.5;
-    color: inherit;
-
-    @media #{$screen-sm} {
-      width: 80%;
-    }
-
-    @media #{$screen-md} {
-      font-size: 18px;
-    }
-  }
-
-  @media #{$screen-sm} {
-    background-image: url('../../assets/background/card-left.png'), url('../../assets/background/card-right.png');
-    background-position: bottom left, top right;
-    background-repeat: no-repeat;
-  }
-
-  @media #{$screen-md} {
-    padding: 100px;
-  }
-}
-
-.LegendItem {
-  display: flex;
-  align-items: center;
-  text-align: left;
-
-  &__box {
-    width: 28px;
-    height: 8px;
-    margin-right: 30px;
-    border: 2px solid $c_white;
-  }
-
-  &__text {
-    font-size: 24px;
-    color: $c_ebony-clay;
-
-    strong {
-      font-weight: bold;
-    }
-  }
-
-  &:not(:last-of-type) {
-    margin-bottom: 30px;
   }
 }
