Implement Antioch page, update babylon page hero card, update home page road to mainnet, move banner to the top of the layout

--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -1,6 +1,8 @@
 @import '../../styles/main';
 
 .Banner {
+  position: relative;
+  z-index: 3;
   display: flex;
   align-items: center;
   justify-content: center;
