--- a/src/pages/founding-members/components/List/style.scss
+++ b/src/pages/founding-members/components/List/style.scss
@@ -23,12 +23,20 @@
     }
   }
 
+  &__cards {
+    display: grid;
+    width: 100%;
+    overflow: hidden;
+    gap: 15px;
+    grid-auto-columns: 288px;
+    grid-auto-flow: column;
+    grid-template-rows: 1fr 1fr;
+  }
+
   &__card {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-width: 288px;
-    min-height: 245px;
     padding: 24px;
     background-color: white;
 
@@ -67,7 +75,7 @@
     &__scores {
       display: flex;
       justify-content: space-between;
-      margin: 11px 0 19px 0;
+      margin: 11px 0 0 0;
     }
 
     &__score {
