--- a/src/pages/founding-members/components/List/style.scss
+++ b/src/pages/founding-members/components/List/style.scss
@@ -6,11 +6,11 @@
   }
 
   &__list {
-    width: 1242px;
-    margin: 0 auto;
+    @extend %container;
+
+    padding: 0 10px 0 10px;
 
     &__title {
-      margin: 0 0 40px 0;
       font-family: $font-primary;
       font-size: 40px;
       line-height: 48px;
@@ -26,11 +26,10 @@
   &__cards {
     display: grid;
     width: 100%;
+    margin-top: 40px;
     overflow: hidden;
     gap: 15px;
-    grid-auto-columns: 288px;
-    grid-auto-flow: column;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(4, 288px);
   }
 
   &__card {
@@ -98,12 +97,21 @@
 
   @media (max-width: 1300px) {
     &__list {
-      width: 100%;
-      margin: 0;
-
       &__title {
-        padding-left: 40px;
+        padding: 0 40px 0 40px;
       }
+    }
+
+    &__cards {
+      justify-content: unset;
+      padding: 0 40px 0 40px;
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+
+  @media (max-width: 900px) {
+    &__cards {
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 
@@ -113,6 +121,12 @@
         font-size: 32px;
         line-height: 40px;
       }
+    }
+  }
+
+  @media (max-width: 650px) {
+    &__cards {
+      grid-template-columns: 1fr;
     }
   }
 }
