Implement about page

--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -1,10 +1,15 @@
 $c_white: #fff;
 $c_black: #000;
 
-$c_silver: #cacaca;
 $c_mercury: #e2e2e2;
+$c_athens-gray: #f4f6f8;
+$c_mystic: #dae2eb;
+$c_silver: #cacaca;
 $c_blue-haze: #c4c3d9;
+$c_loblolly: #b5c1c9;
 $c_grayc-chateau: #a7aeb7;
+$c_slate-gray: #7b8a95;
+$c_wood-smoke: #0b0c0f;
 
 $c_blue-ribbon: #4038ff;
 $c_heather: #c3cbd6;
@@ -22,3 +27,4 @@ $c_picton-blue: #3898ec;
 $c_raspberry: #e50158;
 $c_rose: #ff0161;
 $c_pippin: #ffdede;
+$c_mauve: #d09dff;
