Add Link component around road to mainnet main testnet image, fix styling

--- a/src/components/index-page/RoadToMainnet/style.scss
+++ b/src/components/index-page/RoadToMainnet/style.scss
@@ -55,6 +55,7 @@
 
     &__image-wrapper {
       display: grid;
+      height: 100%;
       background-image: url('../../../assets/background/road-to-mainnet-image.svg');
       background-position: center center;
       background-repeat: no-repeat;
