Implement translation bounty tag, add accompanying translation

--- a/src/components/get-started/Bounties/Carousel/style.scss
+++ b/src/components/get-started/Bounties/Carousel/style.scss
@@ -73,6 +73,10 @@
       &--content {
         background-color: #f2994a;
       }
+
+      &--translation {
+        background-color: #fd5e7d;
+      }
     }
 
     &__card {
@@ -190,6 +194,10 @@
 
       &--content {
         background-color: #f2994a;
+      }
+
+      &--translation {
+        background-color: #fd5e7d;
       }
     }
 
