--- a/src/components/FoundingMembersForm/style.scss
+++ b/src/components/FoundingMembersForm/style.scss
@@ -377,10 +377,35 @@
     }
 
     &__code-text {
-      font-family: $font-secondary;
+      padding: 10px;
+      font-family: monospace, sans-serif;
       font-size: 12px;
       line-height: 18px;
       letter-spacing: -.30000001192092896px;
+      background-color: rgba(50, 50, 50, .04);
+    }
+
+    &__text-area {
+      @extend .FoundingMembersFormPage__form__input;
+
+      max-width: 100%;
+      max-height: 200px;
+      min-height: 100px;
+      padding: 6px 12px;
+      resize: none;
+
+      &::-webkit-scrollbar {
+        width: 4px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        height: 20px;
+        background: #dee3e9;
+      }
+
+      &:focus {
+        outline: none !important;
+      }
     }
   }
 
