Remove current period from dropdown, update scoring period to not be able to be changed, display added data, render choice immediately after picking summary type, update validator question, add modal with toolbox link and explanation how to sign

--- a/src/components/FoundingMembersForm/style.scss
+++ b/src/components/FoundingMembersForm/style.scss
@@ -376,6 +376,12 @@
       appearance: none;
     }
 
+    &__option {
+      &:hover {
+        background-color: blue;
+      }
+    }
+
     &__code-text {
       padding: 10px;
       font-family: monospace, sans-serif;
