Fix jerky loading for landing hero, get started hero, founding members hero and counter

--- a/src/components/get-started/Hero/style.scss
+++ b/src/components/get-started/Hero/style.scss
@@ -64,8 +64,15 @@
       transform: scale(.9);
     }
 
+    &__image {
+      width: 720px;
+      height: 498.9px;
+    }
+
     &__image-alt {
       display: none;
+      width: 375px;
+      height: 260px;
     }
   }
 
